fundo do h2 no index.html

--- a/Site/CSS/index.css
+++ b/Site/CSS/index.css
@@ -20,7 +20,7 @@ h2 {
     color: white;
     text-shadow: gray 1px 1px;
     font-size: 3em;
-    background-color: #4d3319;
+    background-image: url(imagens/60890_XXX_v4.jpg);
     padding: 1em;
     border: white solid 2px;
     border-radius: 45% 45% 45% 45%;
