--- a/Site/CSS/default.css
+++ b/Site/CSS/default.css
@@ -56,6 +56,7 @@ body {
     border: dashed 5px deeppink;
     display: inline-block;
     border-radius: 5px;
+    width: 100%;
 }
 
 .img-responsive {
