--- a/Site/CSS/default.css
+++ b/Site/CSS/default.css
@@ -25,9 +25,8 @@ body {
 }
 
 .bolha {
-    background-color: #ff3333;
+    background-color: #f0f5f5;
     border-radius: 25px;
-    color: aliceblue;
     margin: 2em 0;
     padding: 2em;
 }
