--- a/Site/CSS/default.css
+++ b/Site/CSS/default.css
@@ -12,8 +12,6 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-top: solid black 1px;
-    border-bottom: solid black 1px;
 }
 
 #logo-rodape {
@@ -27,8 +25,14 @@ body {
 .bolha {
     background-color: #f0f5f5;
     border-radius: 25px;
-    margin: 2em 0;
+    margin: 0 0 2em;
     padding: 2em;
+}
+
+.aba {
+	border-radius: 5px 5px 0 0;
+	position: relative;
+	top: 3px;
 }
 
 .well-rodape {
@@ -46,6 +50,18 @@ body {
 
 .verde {
     color: green;
+}
+
+.fundo-verde {
+	background-color: #5cb85c;
+}
+
+.fundo-vermelho {
+	background-color: #d9534f;
+}
+
+.fundo-azul {
+	background-color: #337ab7;
 }
 
 .sombra {
