--- a/Site/CSS/default.css
+++ b/Site/CSS/default.css
@@ -24,10 +24,6 @@ body {
     width: 4em;
 }
 
-#footer-da-pagina {
-    background-color: #5cb85c;
-}
-
 .bolha {
     background-color: #f0f5f5;
     border-radius: 25px;
@@ -48,32 +44,8 @@ body {
     margin: 1em 2.5em;
 }
 
-.rosa {
-    color:deeppink;
-}
-
-.verde {
+.whatsapp {
     color: green;
-}
-
-.fundo-verde {
-	background-color: #5cb85c;
-}
-
-.fundo-vermelho {
-	background-color: #d9534f;
-}
-
-.fundo-azul {
-	background-color: #337ab7;
-}
-
-.fundo-amarelo {
-	background-color: #f0ad4e;
-}
-
-.fundo-azul-claro {
-	background-color: #5bc0de;
 }
 
 .sombra {
@@ -86,4 +58,28 @@ body {
 
 .img-responsiva {
     width: 100%;
+}
+
+.fundo-vermelho {
+	background-color: #d9082f;
+}
+
+.fundo-roxo {
+	background-color: #5a042b;
+}
+
+.fundo-azul {
+	background-color: #6fa687;
+}
+
+.fundo-amarelo {
+	background-color: #f2c32f;
+}
+
+.fundo-branco {
+	background-color: #f1e0b5;
+}
+
+.texto-branco {
+	color: #f1e0b5 !important;
 }
